change locale from en to en_US

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <link rel=canonical href=/en/index.html>
     <meta name=robots content="noindex">
     <meta charset=utf-8>
-    <meta http-equiv=refresh content="0; url=/en/index.html">
+    <meta http-equiv=refresh content="0; url=/en_US/index.html">
   </head>
 </html>
 
